# suzuki

./: README.md  dev.ipynb  duplicated.csv  duplicated.ipynb  main.py  pyproject.toml  scraping.py  suzuki_parts.csv
